src/objects/Email_Reminder__c.object
<CustomObject>
    <fields>
        <fullName>ApplicationID__c</fullName>
        <externalId>true</externalId>
        <label>ApplicationID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Email Reminders</relationshipLabel>
        <relationshipName>Email_Reminders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Email_Datetime__c</fullName>
        <label>Last Email Datetime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Email Reminder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>EmailReminderId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Reminders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>